arcgis/AAG_FieldData/GpMessages/151963356044400
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Friday, December 6, 2024 7:57:58 PM</msg><msg code="0" type="0">Con("C:\Users\Garima\Desktop\ArcGISPro\Ch3\AAG_FieldData\AAG_FieldData\AAG_FieldData.gdb\extract_Bangmasked_fromLandsat" != 2, "C:\Users\Garima\Desktop\ArcGISPro\Ch3\AAG_FieldData\AAG_FieldData\AAG_FieldData.gdb\extract_Bangmasked_fromLandsat")</msg><msg code="539" type="100">ERROR 000539:   File "&lt;string&gt;", line 5
    result = Con("C:\Users\Garima\Desktop\ArcGISPro\Ch3\AAG_FieldData\AAG_FieldData\AAG_FieldData.gdb\extract_Bangmasked_fromLandsat" != 2, "C:\Users\Garima\Desktop\ArcGISPro\Ch3\AAG_FieldData\AAG_FieldData\AAG_FieldData.gdb\extract_Bangmasked_fromLandsat")
                                                                                                                                      ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
</msg><msg code="-2147467259" type="100">Failed to execute (RasterCalculator).</msg><msg code="0" type="3">Failed at Friday, December 6, 2024 7:57:58 PM (Elapsed Time: 0.31 seconds)</msg></messages>